src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instrucciones
Rule 2     main -> Proc PRINCIPAL LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
Rule 3     Proced -> Proc ID LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
Rule 4     instrucciones -> instrucciones instruccion
Rule 5     instrucciones -> instruccion
Rule 6     instruccion -> varDeclaration
Rule 7     instruccion -> Values_f
Rule 8     instruccion -> Alter_f
Rule 9     instruccion -> AlterB_f
Rule 10    instruccion -> MoveRight_f
Rule 11    instruccion -> MoveLeft_f
Rule 12    instruccion -> Hammer_f
Rule 13    instruccion -> Stop_f
Rule 14    instruccion -> IsTrue_f
Rule 15    instruccion -> Repeat_f
Rule 16    instruccion -> Until_f
Rule 17    instruccion -> While_f
Rule 18    instruccion -> Case_f
Rule 19    instruccion -> Case2_f
Rule 20    instruccion -> CaseElse
Rule 21    instruccion -> PrintValues_f
Rule 22    instruccion -> call_f
Rule 23    instruccion -> main
Rule 24    instruccion -> Proced
Rule 25    instruccion -> empty
Rule 26    Values_f -> Values LPARENTHESIS ID COMMA valorDato RPARENTHESIS SEMMICOLOM
Rule 27    valorDato -> True
Rule 28    valorDato -> False
Rule 29    valorDato -> Number
Rule 30    valorDato -> Alter_f
Rule 31    valorDato -> AlterB_f
Rule 32    Alter_f -> Alter LPARENTHESIS ID COMMA ADD COMMA valorDato RPARENTHESIS SEMMICOLOM
Rule 33    Alter_f -> Alter LPARENTHESIS ID COMMA SUB COMMA valorDato RPARENTHESIS SEMMICOLOM
Rule 34    Alter_f -> Alter LPARENTHESIS ID COMMA MUL COMMA valorDato RPARENTHESIS SEMMICOLOM
Rule 35    Alter_f -> Alter LPARENTHESIS ID COMMA DIV COMMA valorDato RPARENTHESIS SEMMICOLOM
Rule 36    AlterB_f -> AlterB LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
Rule 37    MoveRight_f -> MoveRight SEMMICOLOM
Rule 38    MoveLeft_f -> MoveLeft SEMMICOLOM
Rule 39    Hammer_f -> Hammer LPARENTHESIS Norte RPARENTHESIS SEMMICOLOM
Rule 40    Hammer_f -> Hammer LPARENTHESIS Sur RPARENTHESIS SEMMICOLOM
Rule 41    Hammer_f -> Hammer LPARENTHESIS Este RPARENTHESIS SEMMICOLOM
Rule 42    Hammer_f -> Hammer LPARENTHESIS Oeste RPARENTHESIS SEMMICOLOM
Rule 43    Stop_f -> Stop SEMMICOLOM
Rule 44    Repeat_f -> Repeat LPARENTHESIS instrucciones Break RPARENTHESIS SEMMICOLOM
Rule 45    Until_f -> Until LPARENTHESIS instrucciones RPARENTHESIS condicional
Rule 46    While_f -> While condicional LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
Rule 47    Case_f -> Case When LPARENTHESIS condicional RPARENTHESIS Then LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
Rule 48    Case_f -> Case When LPARENTHESIS condicional RPARENTHESIS Then LPARENTHESIS instrucciones RPARENTHESIS Else LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
Rule 49    opciones -> When valorDato Then LPARENTHESIS instrucciones RPARENTHESIS
Rule 50    Case2_f -> Case ID opciones SEMMICOLOM
Rule 51    CaseElse -> Case ID opciones Else instrucciones SEMMICOLOM
Rule 52    something -> ID COMMA something
Rule 53    something -> expresionNum COMMA something
Rule 54    something -> expresionNum
Rule 55    something -> Number COMMA something
Rule 56    something -> Number
Rule 57    something -> TEXTVALUE COMMA something
Rule 58    something -> TEXTVALUE
Rule 59    something -> empty
Rule 60    PrintValues_f -> PrintValues LPARENTHESIS something RPARENTHESIS SEMMICOLOM
Rule 61    empty -> <empty>
Rule 62    condicional -> IsTrue_f
Rule 63    condicional -> Greater_f
Rule 64    condicional -> GreaterEqual_f
Rule 65    condicional -> Equals_f
Rule 66    condicional -> Different_f
Rule 67    condicional -> LessEqual_f
Rule 68    condicional -> Less_f
Rule 69    IsTrue_f -> IsTrue LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
Rule 70    IsTrue_f -> IsTrue LPARENTHESIS ID RPARENTHESIS
Rule 71    Greater_f -> expresionNum Greater expresionNum SEMMICOLOM
Rule 72    Greater_f -> expresionNum Greater expresionNum
Rule 73    GreaterEqual_f -> expresionNum GreaterEqual expresionNum SEMMICOLOM
Rule 74    GreaterEqual_f -> expresionNum GreaterEqual expresionNum
Rule 75    Equals_f -> expresionNum Equals expresionNum SEMMICOLOM
Rule 76    Equals_f -> expresionNum Equals expresionNum
Rule 77    Different_f -> expresionNum Different expresionNum SEMMICOLOM
Rule 78    Different_f -> expresionNum Different expresionNum
Rule 79    LessEqual_f -> expresionNum LessEqual expresionNum SEMMICOLOM
Rule 80    LessEqual_f -> expresionNum LessEqual expresionNum
Rule 81    Less_f -> expresionNum Less expresionNum SEMMICOLOM
Rule 82    Less_f -> expresionNum Less expresionNum
Rule 83    varDeclaration -> New ID COMMA LPARENTHESIS tipoDatos COMMA valorDato RPARENTHESIS SEMMICOLOM
Rule 84    expresionNum -> ID
Rule 85    expresionNum -> Alter_f
Rule 86    expresionNum -> Number
Rule 87    tipoDatos -> Bool
Rule 88    tipoDatos -> Num
Rule 89    call_f -> CALL LPARENTHESIS ID RPARENTHESIS SEMMICOLOM

Terminals, with rules where they appear

ADD                  : 32
Alter                : 32 33 34 35
AlterB               : 36
Bool                 : 87
Break                : 44
CALL                 : 89
COMMA                : 26 32 32 33 33 34 34 35 35 52 53 55 57 83 83
Case                 : 47 48 50 51
DIV                  : 35
Different            : 77 78
Else                 : 48 51
Equals               : 75 76
Este                 : 41
False                : 28
Greater              : 71 72
GreaterEqual         : 73 74
Hammer               : 39 40 41 42
ID                   : 3 26 32 33 34 35 36 50 51 52 69 70 83 84 89
IsTrue               : 69 70
LPARENTHESIS         : 2 3 26 32 33 34 35 36 39 40 41 42 44 45 46 47 47 48 48 48 49 60 69 70 83 89
Less                 : 81 82
LessEqual            : 79 80
MUL                  : 34
MoveLeft             : 38
MoveRight            : 37
New                  : 83
Norte                : 39
Num                  : 88
Number               : 29 55 56 86
Oeste                : 42
PRINCIPAL            : 2
PrintValues          : 60
Proc                 : 2 3
RPARENTHESIS         : 2 3 26 32 33 34 35 36 39 40 41 42 44 45 46 47 47 48 48 48 49 60 69 70 83 89
Repeat               : 44
SEMMICOLOM           : 2 3 26 32 33 34 35 36 37 38 39 40 41 42 43 44 46 47 48 50 51 60 69 71 73 75 77 79 81 83 89
SUB                  : 33
Stop                 : 43
Sur                  : 40
TEXTVALUE            : 57 58
Then                 : 47 48 49
True                 : 27
Until                : 45
Values               : 26
When                 : 47 48 49
While                : 46
error                : 

Nonterminals, with rules where they appear

AlterB_f             : 9 31
Alter_f              : 8 30 85
Case2_f              : 19
CaseElse             : 20
Case_f               : 18
Different_f          : 66
Equals_f             : 65
GreaterEqual_f       : 64
Greater_f            : 63
Hammer_f             : 12
IsTrue_f             : 14 62
LessEqual_f          : 67
Less_f               : 68
MoveLeft_f           : 11
MoveRight_f          : 10
PrintValues_f        : 21
Proced               : 24
Repeat_f             : 15
Stop_f               : 13
Until_f              : 16
Values_f             : 7
While_f              : 17
call_f               : 22
condicional          : 45 46 47 48
empty                : 25 59
expresionNum         : 53 54 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82
instruccion          : 4 5
instrucciones        : 1 2 3 4 44 45 46 47 48 48 49 51
main                 : 23
opciones             : 50 51
something            : 52 53 55 57 60
start                : 0
tipoDatos            : 83
valorDato            : 26 32 33 34 35 49 83
varDeclaration       : 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instrucciones
    (4) instrucciones -> . instrucciones instruccion
    (5) instrucciones -> . instruccion
    (6) instruccion -> . varDeclaration
    (7) instruccion -> . Values_f
    (8) instruccion -> . Alter_f
    (9) instruccion -> . AlterB_f
    (10) instruccion -> . MoveRight_f
    (11) instruccion -> . MoveLeft_f
    (12) instruccion -> . Hammer_f
    (13) instruccion -> . Stop_f
    (14) instruccion -> . IsTrue_f
    (15) instruccion -> . Repeat_f
    (16) instruccion -> . Until_f
    (17) instruccion -> . While_f
    (18) instruccion -> . Case_f
    (19) instruccion -> . Case2_f
    (20) instruccion -> . CaseElse
    (21) instruccion -> . PrintValues_f
    (22) instruccion -> . call_f
    (23) instruccion -> . main
    (24) instruccion -> . Proced
    (25) instruccion -> . empty
    (83) varDeclaration -> . New ID COMMA LPARENTHESIS tipoDatos COMMA valorDato RPARENTHESIS SEMMICOLOM
    (26) Values_f -> . Values LPARENTHESIS ID COMMA valorDato RPARENTHESIS SEMMICOLOM
    (32) Alter_f -> . Alter LPARENTHESIS ID COMMA ADD COMMA valorDato RPARENTHESIS SEMMICOLOM
    (33) Alter_f -> . Alter LPARENTHESIS ID COMMA SUB COMMA valorDato RPARENTHESIS SEMMICOLOM
    (34) Alter_f -> . Alter LPARENTHESIS ID COMMA MUL COMMA valorDato RPARENTHESIS SEMMICOLOM
    (35) Alter_f -> . Alter LPARENTHESIS ID COMMA DIV COMMA valorDato RPARENTHESIS SEMMICOLOM
    (36) AlterB_f -> . AlterB LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
    (37) MoveRight_f -> . MoveRight SEMMICOLOM
    (38) MoveLeft_f -> . MoveLeft SEMMICOLOM
    (39) Hammer_f -> . Hammer LPARENTHESIS Norte RPARENTHESIS SEMMICOLOM
    (40) Hammer_f -> . Hammer LPARENTHESIS Sur RPARENTHESIS SEMMICOLOM
    (41) Hammer_f -> . Hammer LPARENTHESIS Este RPARENTHESIS SEMMICOLOM
    (42) Hammer_f -> . Hammer LPARENTHESIS Oeste RPARENTHESIS SEMMICOLOM
    (43) Stop_f -> . Stop SEMMICOLOM
    (69) IsTrue_f -> . IsTrue LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
    (70) IsTrue_f -> . IsTrue LPARENTHESIS ID RPARENTHESIS
    (44) Repeat_f -> . Repeat LPARENTHESIS instrucciones Break RPARENTHESIS SEMMICOLOM
    (45) Until_f -> . Until LPARENTHESIS instrucciones RPARENTHESIS condicional
    (46) While_f -> . While condicional LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (47) Case_f -> . Case When LPARENTHESIS condicional RPARENTHESIS Then LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (48) Case_f -> . Case When LPARENTHESIS condicional RPARENTHESIS Then LPARENTHESIS instrucciones RPARENTHESIS Else LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (50) Case2_f -> . Case ID opciones SEMMICOLOM
    (51) CaseElse -> . Case ID opciones Else instrucciones SEMMICOLOM
    (60) PrintValues_f -> . PrintValues LPARENTHESIS something RPARENTHESIS SEMMICOLOM
    (89) call_f -> . CALL LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
    (2) main -> . Proc PRINCIPAL LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (3) Proced -> . Proc ID LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (61) empty -> .

  ! shift/reduce conflict for New resolved as shift
  ! shift/reduce conflict for Values resolved as shift
  ! shift/reduce conflict for Alter resolved as shift
  ! shift/reduce conflict for AlterB resolved as shift
  ! shift/reduce conflict for MoveRight resolved as shift
  ! shift/reduce conflict for MoveLeft resolved as shift
  ! shift/reduce conflict for Hammer resolved as shift
  ! shift/reduce conflict for Stop resolved as shift
  ! shift/reduce conflict for IsTrue resolved as shift
  ! shift/reduce conflict for Repeat resolved as shift
  ! shift/reduce conflict for Until resolved as shift
  ! shift/reduce conflict for While resolved as shift
  ! shift/reduce conflict for Case resolved as shift
  ! shift/reduce conflict for PrintValues resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for Proc resolved as shift
    New             shift and go to state 24
    Values          shift and go to state 25
    Alter           shift and go to state 26
    AlterB          shift and go to state 27
    MoveRight       shift and go to state 28
    MoveLeft        shift and go to state 29
    Hammer          shift and go to state 30
    Stop            shift and go to state 31
    IsTrue          shift and go to state 32
    Repeat          shift and go to state 33
    Until           shift and go to state 34
    While           shift and go to state 35
    Case            shift and go to state 36
    PrintValues     shift and go to state 37
    CALL            shift and go to state 38
    Proc            shift and go to state 39
    $end            reduce using rule 61 (empty -> .)

  ! New             [ reduce using rule 61 (empty -> .) ]
  ! Values          [ reduce using rule 61 (empty -> .) ]
  ! Alter           [ reduce using rule 61 (empty -> .) ]
  ! AlterB          [ reduce using rule 61 (empty -> .) ]
  ! MoveRight       [ reduce using rule 61 (empty -> .) ]
  ! MoveLeft        [ reduce using rule 61 (empty -> .) ]
  ! Hammer          [ reduce using rule 61 (empty -> .) ]
  ! Stop            [ reduce using rule 61 (empty -> .) ]
  ! IsTrue          [ reduce using rule 61 (empty -> .) ]
  ! Repeat          [ reduce using rule 61 (empty -> .) ]
  ! Until           [ reduce using rule 61 (empty -> .) ]
  ! While           [ reduce using rule 61 (empty -> .) ]
  ! Case            [ reduce using rule 61 (empty -> .) ]
  ! PrintValues     [ reduce using rule 61 (empty -> .) ]
  ! CALL            [ reduce using rule 61 (empty -> .) ]
  ! Proc            [ reduce using rule 61 (empty -> .) ]

    start                          shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    varDeclaration                 shift and go to state 4
    Values_f                       shift and go to state 5
    Alter_f                        shift and go to state 6
    AlterB_f                       shift and go to state 7
    MoveRight_f                    shift and go to state 8
    MoveLeft_f                     shift and go to state 9
    Hammer_f                       shift and go to state 10
    Stop_f                         shift and go to state 11
    IsTrue_f                       shift and go to state 12
    Repeat_f                       shift and go to state 13
    Until_f                        shift and go to state 14
    While_f                        shift and go to state 15
    Case_f                         shift and go to state 16
    Case2_f                        shift and go to state 17
    CaseElse                       shift and go to state 18
    PrintValues_f                  shift and go to state 19
    call_f                         shift and go to state 20
    main                           shift and go to state 21
    Proced                         shift and go to state 22
    empty                          shift and go to state 23

state 1

    (0) S' -> start .



state 2

    (1) start -> instrucciones .
    (4) instrucciones -> instrucciones . instruccion
    (6) instruccion -> . varDeclaration
    (7) instruccion -> . Values_f
    (8) instruccion -> . Alter_f
    (9) instruccion -> . AlterB_f
    (10) instruccion -> . MoveRight_f
    (11) instruccion -> . MoveLeft_f
    (12) instruccion -> . Hammer_f
    (13) instruccion -> . Stop_f
    (14) instruccion -> . IsTrue_f
    (15) instruccion -> . Repeat_f
    (16) instruccion -> . Until_f
    (17) instruccion -> . While_f
    (18) instruccion -> . Case_f
    (19) instruccion -> . Case2_f
    (20) instruccion -> . CaseElse
    (21) instruccion -> . PrintValues_f
    (22) instruccion -> . call_f
    (23) instruccion -> . main
    (24) instruccion -> . Proced
    (25) instruccion -> . empty
    (83) varDeclaration -> . New ID COMMA LPARENTHESIS tipoDatos COMMA valorDato RPARENTHESIS SEMMICOLOM
    (26) Values_f -> . Values LPARENTHESIS ID COMMA valorDato RPARENTHESIS SEMMICOLOM
    (32) Alter_f -> . Alter LPARENTHESIS ID COMMA ADD COMMA valorDato RPARENTHESIS SEMMICOLOM
    (33) Alter_f -> . Alter LPARENTHESIS ID COMMA SUB COMMA valorDato RPARENTHESIS SEMMICOLOM
    (34) Alter_f -> . Alter LPARENTHESIS ID COMMA MUL COMMA valorDato RPARENTHESIS SEMMICOLOM
    (35) Alter_f -> . Alter LPARENTHESIS ID COMMA DIV COMMA valorDato RPARENTHESIS SEMMICOLOM
    (36) AlterB_f -> . AlterB LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
    (37) MoveRight_f -> . MoveRight SEMMICOLOM
    (38) MoveLeft_f -> . MoveLeft SEMMICOLOM
    (39) Hammer_f -> . Hammer LPARENTHESIS Norte RPARENTHESIS SEMMICOLOM
    (40) Hammer_f -> . Hammer LPARENTHESIS Sur RPARENTHESIS SEMMICOLOM
    (41) Hammer_f -> . Hammer LPARENTHESIS Este RPARENTHESIS SEMMICOLOM
    (42) Hammer_f -> . Hammer LPARENTHESIS Oeste RPARENTHESIS SEMMICOLOM
    (43) Stop_f -> . Stop SEMMICOLOM
    (69) IsTrue_f -> . IsTrue LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
    (70) IsTrue_f -> . IsTrue LPARENTHESIS ID RPARENTHESIS
    (44) Repeat_f -> . Repeat LPARENTHESIS instrucciones Break RPARENTHESIS SEMMICOLOM
    (45) Until_f -> . Until LPARENTHESIS instrucciones RPARENTHESIS condicional
    (46) While_f -> . While condicional LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (47) Case_f -> . Case When LPARENTHESIS condicional RPARENTHESIS Then LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (48) Case_f -> . Case When LPARENTHESIS condicional RPARENTHESIS Then LPARENTHESIS instrucciones RPARENTHESIS Else LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (50) Case2_f -> . Case ID opciones SEMMICOLOM
    (51) CaseElse -> . Case ID opciones Else instrucciones SEMMICOLOM
    (60) PrintValues_f -> . PrintValues LPARENTHESIS something RPARENTHESIS SEMMICOLOM
    (89) call_f -> . CALL LPARENTHESIS ID RPARENTHESIS SEMMICOLOM
    (2) main -> . Proc PRINCIPAL LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (3) Proced -> . Proc ID LPARENTHESIS instrucciones RPARENTHESIS SEMMICOLOM
    (61) empty -> .

  ! shift/reduce conflict for New resolved as shift
  ! shift/reduce conflict for Values resolved as shift
  ! shift/reduce conflict for Alter resolved as shift
  ! shift/reduce conflict for AlterB resolved as shift
  ! shift/reduce conflict for MoveRight resolved as shift
  ! shift/reduce conflict for MoveLeft resolved as shift
  ! shift/reduce conflict for Hammer resolved as shift
  ! shift/reduce conflict for Stop resolved as shift
  ! shift/reduce conflict for IsTrue resolved as shift
  ! shift/reduce conflict for Repeat resolved as shift
  ! shift/reduce conflict for Until resolved as shift
  ! shift/reduce conflict for While resolved as shift
  ! shift/reduce conflict for Case resolved as shift
  ! shift/reduce conflict for PrintValues resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for Proc resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (start -> instrucciones .)
    $end            reduce using rule 1 (start -> instrucciones .)
    New             shift and go to state 24
    Values          shift and go to state 25
    Alter           shift and go to state 26
    AlterB          shift and go to state 27
    MoveRight       shift and go to state 28
    MoveLeft        shift and go to state 29
    Hammer          shift and go to state 30
    Stop            shift and go to state 31
    IsTrue          shift and go to state 32
    Repeat          shift and go to state 33
    Until           shift and go to state 34
    While           shift and go to state 35
    Case            shift and go to state 36
    PrintValues     shift and go to state 37
    CALL            shift and go to state 38
    Proc            shift and go to state 39

  ! New             [ reduce using rule 61 (empty -> .) ]
  ! Values          [ reduce using rule 61 (empty -> .) ]
  ! Alter           [ reduce using rule 61 (empty -> .) ]
  ! AlterB          [ reduce using rule 61 (empty -> .) ]
  ! MoveRight       [ reduce using rule 61 (empty -> .) ]
  ! MoveLeft        [ reduce using rule 61 (empty -> .) ]
  ! Hammer          [ reduce using rule 61 (empty -> .) ]
  ! Stop            [ reduce using rule 61 (empty -> .) ]
  ! IsTrue          [ reduce using rule 61 (empty -> .) ]
  ! Repeat          [ reduce using rule 61 (empty -> .) ]
  ! Until           [ reduce using rule 61 (empty -> .) ]
  ! While           [ reduce using rule 61 (empty -> .) ]
  ! Case            [ reduce using rule 61 (empty -> .) ]
  ! PrintValues     [ reduce using rule 61 (empty -> .) ]
  ! CALL            [ reduce using rule 61 (empty -> .) ]
  ! Proc            [ reduce using rule 61 (empty -> .) ]
  ! $end            [ reduce using rule 61 (empty -> .) ]

    instruccion                    shift and go to state 40
    varDeclaration                 shift and go to state 4
    Values_f                       shift and go to state 5
    Alter_f                        shift and go to state 6
    AlterB_f                       shift and go to state 7
    MoveRight_f                    shift and go to state 8
    MoveLeft_f                     shift and go to state 9
    Hammer_f                       shift and go to state 10
    Stop_f                         shift and go to state 11
    IsTrue_f                       shift and go to state 12
    Repeat_f                       shift and go to state 13
    Until_f                        shift and go to state 14
    While_f                        shift and go to state 15
    Case_f                         shift and go to state 16
    Case2_f                        shift and go to state 17
    CaseElse                       shift and go to state 18
    PrintValues_f                  shift and go to state 19
    call_f                         shift and go to state 20
    main                           shift and go to state 21
    Proced                         shift and go to state 22
    empty                          shift and go to state 23

state 3

    (5) instrucciones -> instruccion .

    New             reduce using rule 5 (instrucciones -> instruccion .)
    Values          reduce using rule 5 (instrucciones -> instruccion .)
    Alter           reduce using rule 5 (instrucciones -> instruccion .)
    AlterB          reduce using rule 5 (instrucciones -> instruccion .)
    MoveRight       reduce using rule 5 (instrucciones -> instruccion .)
    MoveLeft        reduce using rule 5 (instrucciones -> instruccion .)
    Hammer          reduce using rule 5 (instrucciones -> instruccion .)
    Stop            reduce using rule 5 (instrucciones -> instruccion .)
    IsTrue          reduce using rule 5 (instrucciones -> instruccion .)
    Repeat          reduce using rule 5 (instrucciones -> instruccion .)
    Until           reduce using rule 5 (instrucciones -> instruccion .)
    While           reduce using rule 5 (instrucciones -> instruccion .)
    Case            reduce using rule 5 (instrucciones -> instruccion .)
    PrintValues     reduce using rule 5 (instrucciones -> instruccion .)
    CALL            reduce using rule 5 (instrucciones -> instruccion .)
    Proc            reduce using rule 5 (instrucciones -> instruccion .)
    $end            reduce using rule 5 (instrucciones -> instruccion .)
    Break           reduce using rule 5 (instrucciones -> instruccion .)
    RPARENTHESIS    reduce using rule 5 (instrucciones -> instruccion .)
    SEMMICOLOM      reduce using rule 5 (instrucciones -> instruccion .)


state 4

    (6) instruccion -> varDeclaration .

    New             reduce using rule 6 (instruccion -> varDeclaration .)
    Values          reduce using rule 6 (instruccion -> varDeclaration .)
    Alter           reduce using rule 6 (instruccion -> varDeclaration .)
    AlterB          reduce using rule 6 (instruccion -> varDeclaration .)
    MoveRight       reduce using rule 6 (instruccion -> varDeclaration .)
    MoveLeft        reduce using rule 6 (instruccion -> varDeclaration .)
    Hammer          reduce using rule 6 (instruccion -> varDeclaration .)
    Stop            reduce using rule 6 (instruccion -> varDeclaration .)
    IsTrue          reduce using rule 6 (instruccion -> varDeclaration .)
    Repeat          reduce using rule 6 (instruccion -> varDeclaration .)
    Until           reduce using rule 6 (instruccion -> varDeclaration .)
    While           reduce using rule 6 (instruccion -> varDeclaration .)
    Case            reduce using rule 6 (instruccion -> varDeclaration .)
    PrintValues     reduce using rule 6 (instruccion -> varDeclaration .)
    CALL            reduce using rule 6 (instruccion -> varDeclaration .)
    Proc            reduce using rule 6 (instruccion -> varDeclaration .)
    $end            reduce using rule 6 (instruccion -> varDeclaration .)
    Break           reduce using rule 6 (instruccion -> varDeclaration .)
    RPARENTHESIS    reduce using rule 6 (instruccion -> varDeclaration .)
    SEMMICOLOM      reduce using rule 6 (instruccion -> varDeclaration .)


state 5

    (7) instruccion -> Values_f .

    New             reduce using rule 7 (instruccion -> Values_f .)
    Values          reduce using rule 7 (instruccion -> Values_f .)
    Alter           reduce using rule 7 (instruccion -> Values_f .)
    AlterB          reduce using rule 7 (instruccion -> Values_f .)
    MoveRight       reduce using rule 7 (instruccion -> Values_f .)
    MoveLeft        reduce using rule 7 (instruccion -> Values_f .)
    Hammer          reduce using rule 7 (instruccion -> Values_f .)
    Stop            reduce using rule 7 (instruccion -> Values_f .)
    IsTrue          reduce using rule 7 (instruccion -> Values_f .)
    Repeat          reduce using rule 7 (instruccion -> Values_f .)
    Until           reduce using rule 7 (instruccion -> Values_f .)
    While           reduce using rule 7 (instruccion -> Values_f .)
    Case            reduce using rule 7 (instruccion -> Values_f .)
    PrintValues     reduce using rule 7 (instruccion -> Values_f .)
    CALL            reduce using rule 7 (instruccion -> Values_f .)
    Proc            reduce using rule 7 (instruccion -> Values_f .)
    $end            reduce using rule 7 (instruccion -> Values_f .)
    Break           reduce using rule 7 (instruccion -> Values_f .)
    RPARENTHESIS    reduce using rule 7 (instruccion -> Values_f .)
    SEMMICOLOM      reduce using rule 7 (instruccion -> Values_f .)


state 6

    (8) instruccion -> Alter_f .

    New             reduce using rule 8 (instruccion -> Alter_f .)
    Values          reduce using rule 8 (instruccion -> Alter_f .)
    Alter           reduce using rule 8 (instruccion -> Alter_f .)
    AlterB          reduce using rule 8 (instruccion -> Alter_f .)
    MoveRight       reduce using rule 8 (instruccion -> Alter_f .)
    MoveLeft        reduce using rule 8 (instruccion -> Alter_f .)
    Hammer          reduce using rule 8 (instruccion -> Alter_f .)
    Stop            reduce using rule 8 (instruccion -> Alter_f .)
    IsTrue          reduce using rule 8 (instruccion -> Alter_f .)
    Repeat          reduce using rule 8 (instruccion -> Alter_f .)
    Until           reduce using rule 8 (instruccion -> Alter_f .)
    While           reduce using rule 8 (instruccion -> Alter_f .)
    Case            reduce using rule 8 (instruccion -> Alter_f .)
    PrintValues     reduce using rule 8 (instruccion -> Alter_f .)
    CALL            reduce using rule 8 (instruccion -> Alter_f .)
    Proc            reduce using rule 8 (instruccion -> Alter_f .)
    $end            reduce using rule 8 (instruccion -> Alter_f .)
    Break           reduce using rule 8 (instruccion -> Alter_f .)
    RPARENTHESIS    reduce using rule 8 (instruccion -> Alter_f .)
    SEMMICOLOM      reduce using rule 8 (instruccion -> Alter_f .)


state 7

    (9) instruccion -> AlterB_f .

    New             reduce using rule 9 (instruccion -> AlterB_f .)
    Values          reduce using rule 9 (instruccion -> AlterB_f .)
    Alter           reduce using rule 9 (instruccion -> AlterB_f .)
    AlterB          reduce using rule 9 (instruccion -> AlterB_f .)
    MoveRight       reduce using rule 9 (instruccion -> AlterB_f .)
    MoveLeft        reduce using rule 9 (instruccion -> AlterB_f .)
    Hammer          reduce using rule 9 (instruccion -> AlterB_f .)
    Stop            reduce using rule 9 (instruccion -> AlterB_f .)
    IsTrue          reduce using rule 9 (instruccion -> AlterB_f .)
    Repeat          reduce using rule 9 (instruccion -> AlterB_f .)
    Until           reduce using rule 9 (instruccion -> AlterB_f .)
    While           reduce using rule 9 (instruccion -> AlterB_f .)
    Case            reduce using rule 9 (instruccion -> AlterB_f .)
    PrintValues     reduce using rule 9 (instruccion -> AlterB_f .)
    CALL            reduce using rule 9 (instruccion -> AlterB_f .)
    Proc            reduce using rule 9 (instruccion -> AlterB_f .)
    $end            reduce using rule 9 (instruccion -> AlterB_f .)
    Break           reduce using rule 9 (instruccion -> AlterB_f .)
    RPARENTHESIS    reduce using rule 9 (instruccion -> AlterB_f .)
    SEMMICOLOM      reduce using rule 9 (instruccion -> AlterB_f .)


state 8

    (10) instruccion -> MoveRight_f .

    New             reduce using rule 10 (instruccion -> MoveRight_f .)
    Values          reduce using rule 10 (instruccion -> MoveRight_f .)
    Alter           reduce using rule 10 (instruccion -> MoveRight_f .)
    AlterB          reduce using rule 10 (instruccion -> MoveRight_f .)
    MoveRight       reduce using rule 10 (instruccion -> MoveRight_f .)
    MoveLeft        reduce using rule 10 (instruccion -> MoveRight_f .)
    Hammer          reduce using rule 10 (instruccion -> MoveRight_f .)
    Stop            reduce using rule 10 (instruccion -> MoveRight_f .)
    IsTrue          reduce using rule 10 (instruccion -> MoveRight_f .)
    Repeat          reduce using rule 10 (instruccion -> MoveRight_f .)
    Until           reduce using rule 10 (instruccion -> MoveRight_f .)
    While           reduce using rule 10 (instruccion -> MoveRight_f .)
    Case            reduce using rule 10 (instruccion -> MoveRight_f .)
    PrintValues     reduce using rule 10 (instruccion -> MoveRight_f .)
    CALL            reduce using rule 10 (instruccion -> MoveRight_f .)
    Proc            reduce using rule 10 (instruccion -> MoveRight_f .)
    $end            reduce using rule 10 (instruccion -> MoveRight_f .)
    Break           reduce using rule 10 (instruccion -> MoveRight_f .)
    RPARENTHESIS    reduce using rule 10 (instruccion -> MoveRight_f .)
    SEMMICOLOM      reduce using rule 10 (instruccion -> MoveRight_f .)


state 9

    (11) instruccion -> MoveLeft_f .

    New             reduce using rule 11 (instruccion -> MoveLeft_f .)
    Values          reduce using rule 11 (instruccion -> MoveLeft_f .)
    Alter           reduce using rule 11 (instruccion -> MoveLeft_f .)
    AlterB          reduce using rule 11 (instruccion -> MoveLeft_f .)
    MoveRight       reduce using rule 11 (instruccion -> MoveLeft_f .)
    MoveLeft        reduce using rule 11 (instruccion -> MoveLeft_f .)
    Hammer          reduce using rule 11 (instruccion -> MoveLeft_f .)
    Stop            reduce using rule 11 (instruccion -> MoveLeft_f .)
    IsTrue          reduce using rule 11 (instruccion -> MoveLeft_f .)
    Repeat          reduce using rule 11 (instruccion -> MoveLeft_f .)
    Until           reduce using rule 11 (instruccion -> MoveLeft_f .)
    While           reduce using rule 11 (instruccion -> MoveLeft_f .)
    Case            reduce using rule 11 (instruccion -> MoveLeft_f .)
    PrintValues     reduce using rule 11 (instruccion -> MoveLeft_f .)
    CALL            reduce using rule 11 (instruccion -> MoveLeft_f .)
    Proc            reduce using rule 11 (instruccion -> MoveLeft_f .)
    $end            reduce using rule 11 (instruccion -> MoveLeft_f .)
    Break           reduce using rule 11 (instruccion -> MoveLeft_f .)
    RPARENTHESIS    reduce using rule 11 (instruccion -> MoveLeft_f .)
    SEMMICOLOM      reduce using rule 11 (instruccion -> MoveLeft_f .)


state 10

    (12) instruccion -> Hammer_f .
